--- a/Kelompok1session1.html
+++ b/Kelompok1session1.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="bower_components/Ionicons/css/ionicons.css"/>
   <!-- Theme style -->
   <link rel="stylesheet" href="dist/css/AdminLTE.css"/>
+  <link rel="stylesheet" href="plugins/iCheck/all.css"/>
   <!-- AdminLTE Skins. Choose a skin from the css/skins
        folder instead of downloading all of them to reduce the load. -->
   <link rel="stylesheet" href="dist/css/skins/_all-skins.css"/>
@@ -106,56 +107,28 @@
 
     <!-- Main content -->
 
-  <section class="content">
+  <section class="content-header">
     <div class="row">
-      <div class="col-lg-10">
-        <h3 class="soal">1. Tipe data apa saja yang bisa digunakan untuk switch</h3>
-          <div class="checkbox soal jawaban">
-            <label><input type="checkbox" value="">
-              <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-              <strong>int</strong>
-            </label>
+      <div class="contain">
+        <div class="form-group">
+          <div class="col-lg-12">
+            <table>
+              <tr>
+                <th width="50"><center>No</center></th>
+                <th width="950"><center>Soal</center></th>
+                <th><center>jawaban</center></th>
+              </tr>
+              <tr>
+                <th><center>1</center></th>
+                <th>Aku Lebih Suka Kisah petualangan dari pada kisah cinta</th>
+                <th><center><input type="checkbox" class="flat-red"></center></th>
+              </tr>
+            </table>
           </div>
-          <div class="checkbox soal jawaban">
-            <label><input type="checkbox" value="">
-              <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-              <strong>float</strong>
-            </label>
-          </div>
-          <div class="checkbox soal jawaban">
-            <label><input type="checkbox" value="">
-              <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-              <strong>double</strong>
-            </label>
-          </div>
-          <div class="checkbox soal jawaban">
-            <label><input type="checkbox" value="">
-              <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-              <strong>string</strong>
-            </label>
-          </div>
-          <div class="checkbox soal jawaban">
-            <label><input type="checkbox" value="">
-              <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-              <strong>enum</strong>
-            </label>
-          </div>
-          <br/><br/><br/><br/><br/><br/>
-          <div class="countdown">
-          	<span id="time"></span>
-          </div>
-          <div class="btn-group kanan" role="group" aria-label="Basic example">
-            <button type="button" class="btn btn-secondary fa fa-arrow-right fa-lg"> Next
-          </div>
-      </div>
-      <div class="col-lg-2">
-        <div class="checkbox">
-            <label><input type="checkbox" value="">
-              <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-              <strong>Flex</strong>
-            </label>
         </div>
+
       </div>
+
     </div>
   </section>
 
@@ -190,6 +163,11 @@
       autoclose: true
     })
   })
+
+  $('input[type="checkbox"].minimal, input[type="radio"].minimal').iCheck({
+      checkboxClass: 'icheckbox_minimal-blue',
+      radioClass   : 'iradio_minimal-blue'
+    })
 </script>
 <!-- Bootstrap 3.3.7 -->
 <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
