--- a/Kelompok1session1.html
+++ b/Kelompok1session1.html
@@ -115,13 +115,15 @@
             <table>
               <tr>
                 <th width="50"><center>No</center></th>
+                  <th  width="60"><center>jawaban</center></th>
                 <th width="950"><center>Soal</center></th>
-                <th><center>jawaban</center></th>
+
               </tr>
               <tr>
                 <th><center>1</center></th>
-                <th>Aku Lebih Suka Kisah petualangan dari pada kisah cinta</th>
                 <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th>Aku Lebih Suka Kisah petualangan dari pada kisah cinta</th>
+
               </tr>
             </table>
           </div>
