Kelompok2session3 penambahan sub 5

--- a/Kelompok2session3.html
+++ b/Kelompok2session3.html
@@ -91,6 +91,7 @@
             <li><a href="#"><i class="fa fa-circle-o"></i>SUB 2</a></li>
             <li><a href="#"><i class="fa fa-circle-o"></i>SUB 3</a></li>
             <li><a href="#"><i class="fa fa-circle-o"></i>SUB 4</a></li>
+            <li><a href="#"><i class="fa fa-circle-o"></i>SUB 5</a></li>
           </ul>
         </li>
 
