--- a/Kelompok3session1.html
+++ b/Kelompok3session1.html
@@ -115,7 +115,7 @@
             <table>
               <tr>
                 <th width="50"><center>No</center></th>
-                  <th  width="60"><center>jawaban</center></th>
+                  <th  width="60"><center>Setuju</center></th>
                 <th width="950"><center>Soal</center></th>
 
               </tr>
