Penambahan sub 5 dan Mengubah jawaban menjadi setuju

--- a/Kelompok2session1.html
+++ b/Kelompok2session1.html
@@ -67,6 +67,7 @@
             <li><a href="#"><i class="fa fa-circle-o"></i>SUB 2</a></li>
             <li><a href="#"><i class="fa fa-circle-o"></i>SUB 3</a></li>
             <li><a href="#"><i class="fa fa-circle-o"></i>SUB 4</a></li>
+            <li><a href="#"><i class="fa fa-circle-o"></i>SUB 5</a></li>
           </ul>
         </li>
           <li class="treeview">
@@ -91,6 +92,7 @@
             <li><a href="#"><i class="fa fa-circle-o"></i>SUB 2</a></li>
             <li><a href="#"><i class="fa fa-circle-o"></i>SUB 3</a></li>
             <li><a href="#"><i class="fa fa-circle-o"></i>SUB 4</a></li>
+            <li><a href="#"><i class="fa fa-circle-o"></i>SUB 5</a></li>
           </ul>
         </li>
 
@@ -116,7 +118,7 @@
             <table>
               <tr>
                 <th width="50"><center>No</center></th>
-                  <th  width="60"><center>jawaban</center></th>
+                  <th  width="60"><center>Setuju</center></th>
                 <th width="950"><center>Soal</center></th>
               </tr>
               <tr>
