--- a/Kelompok2session5.html
+++ b/Kelompok2session5.html
@@ -122,7 +122,7 @@
                 <th width="950"><center>Soal</center></th>
               </tr>
               <tr>
-                <th><center>121</center></th>
+                <th><center>136</center></th>
               <th>
                 <div class="checkbox">
                   <label>
@@ -131,10 +131,10 @@
                   </label>
                 </div>
               </th>
-                <th>Aku yakin bahwa ada komplotan yang memusuhiku.</th>
+                <th>Apabila ada orang yang berbuat sangat baik terhadapku, aku biasanya bertanya-tanya tentang latar belakang/alasanya.</th>
               </tr>
               <tr>
-                <th><center>122</center></th>
+                <th><center>137</center></th>
               <th>
                 <div class="checkbox">
                   <label>
@@ -143,10 +143,10 @@
                   </label>
                 </div>
               </th>
-                <th>Rasanya aku mampu dan pandai seperti orang lain.</th>
+                <th>Aku berpendapat bahwa kehidupan keluargaku sama menyenangkanya dengan kebanyakan keluarga yang kukenal.</th>
               </tr>
               <tr>
-                <th><center>123</center></th>
+                <th><center>138</center></th>
               <th>
                 <div class="checkbox">
                   <label>
@@ -155,10 +155,10 @@
                   </label>
                 </div>
               </th>
-                <th>Aku yakin aku sedang diikuti (dibayang-bayangi).</th>
+                <th>Kritik dan teguran sangat menyakiti hatiku.</th>
               </tr>
               <tr>
-                <th><center>124</center></th>
+                <th><center>139</center></th>
               <th>
                 <div class="checkbox">
                   <label>
@@ -167,10 +167,10 @@
                   </label>
                 </div>
               </th>
-                <th>Banyak orang mempergunakan cara-cara yang agak kurang jujur untuk memperoleh keuntungan, dari pada jkehilangan keuntungan tersebut.</th>
+                <th>Kadang-kadang aku merasa seakan-akan aku harus melaukai diriku sendiri atau orang lain.</th>
               </tr>
               <tr>
-                <th><center>125</center></th>
+                <th><center>140</center></th>
               <th>
                 <div class="checkbox">
                   <label>
@@ -179,10 +179,10 @@
                   </label>
                 </div>
               </th>
-                <th>Aku sering menderita sakit perut.</th>
+                <th>Aku senang memasak.</th>
               </tr>
               <tr>
-                <th><center>126</center></th>
+                <th><center>141</center></th>
               <th>
                 <div class="checkbox">
                   <label>
@@ -191,10 +191,10 @@
                   </label>
                 </div>
               </th>
-                <th>Aku menyukai seni drama.</th>
+                <th>Kelakuanku banyak dipengaruhi oleh adat kebiasaan lingkunganku.</th>
               </tr>
               <tr>
-                <th><center>127</center></th>
+                <th><center>142</center></th>
               <th>
                 <div class="checkbox">
                   <label>
@@ -203,10 +203,10 @@
                   </label>
                 </div>
               </th>
-                <th>Aku tahu siapa yang menjadi biang keladi dari kesulitan-kesulitanku.</th>
+                <th>Kadang-kadang aku benar-benar merasa tidak berguna.</th>
               </tr>
               <tr>
-                <th><center>128</center></th>
+                <th><center>143</center></th>
               <th>
                 <div class="checkbox">
                   <label>
@@ -215,10 +215,10 @@
                   </label>
                 </div>
               </th>
-                <th>Aku tidak takut atau terganggu melihat darah.</th>
+                <th>Semasa muda aku menjadi kelompok yang kompak dalam suka dan duka.</th>
               </tr>
               <tr>
-                <th><center>129</center></th>
+                <th><center>144</center></th>
               <th>
                 <div class="checkbox">
                   <label>
@@ -227,10 +227,10 @@
                   </label>
                 </div>
               </th>
-                <th>Kadang-kadang aku tidak mengerti mengapa aku marah dan mengomel.</th>
+                <th>Aku mau juga menjadi POLRI.</th>
               </tr>
               <tr>
-                <th><center>130</center></th>
+                <th><center>145</center></th>
               <th>
                 <div class="checkbox">
                   <label>
@@ -239,10 +239,10 @@
                   </label>
                 </div>
               </th>
-                <th>Aku belum pernah batuk darah atau muntah darah.</th>
+                <th>Adakalanya aku merasa ingin berkelahi dengan seseorang.</th>
               </tr>
               <tr>
-                <th><center>131</center></th>
+                <th><center>146</center></th>
               <th>
                 <div class="checkbox">
                   <label>
@@ -251,10 +251,10 @@
                   </label>
                 </div>
               </th>
-                <th>Aku ltidak khawatir terserang penyakit.</th>
+                <th>Aku berjiwa pengembara dan tidak merasa bahagia bila tidak berkelana.</th>
               </tr>
               <tr>
-                <th><center>132</center></th>
+                <th><center>147</center></th>
               <th>
                 <div class="checkbox">
                   <label>
@@ -263,10 +263,10 @@
                   </label>
                 </div>
               </th>
-                <th>Aku suka mengumpulkan dan memelihara tanaman hias dan bunga.</th>
+                <th>Aku sering kehilangan kesempatan baik karena ragu-ragu membuat keputusan.</th>
               </tr>
               <tr>
-                <th><center>133</center></th>
+                <th><center>148</center></th>
               <th>
                 <div class="checkbox">
                   <label>
@@ -275,10 +275,10 @@
                   </label>
                 </div>
               </th>
-                <th>Aku belum pernah tertarik dan melakukan perbuatan seks yang tidak wajar.</th>
+                <th>Bila aku sedang sibuk dengan sesuatu yang penting dan orang datang menggangguku minta nasehat, aku menjadi tidak sabar.</th>
               </tr>
               <tr>
-                <th><center>134</center></th>
+                <th><center>149</center></th>
               <th>
                 <div class="checkbox">
                   <label>
@@ -287,10 +287,10 @@
                   </label>
                 </div>
               </th>
-                <th>Ada masanya pikiranku lebih cepat dari pada ucapanku.</th>
+                <th>Aku biasa menulis pengalamanku dalam buku harian.</th>
               </tr>
               <tr>
-                <th><center>135</center></th>
+                <th><center>150</center></th>
               <th>
                 <div class="checkbox">
                   <label>
@@ -299,7 +299,7 @@
                   </label>
                 </div>
               </th>
-                <th>Bila aku yakin tidak seorangpun yang melihatnya, mungkin sekali aku akan menyelundup nonton tanpa karcis.</th>
+                <th>Aku lebih senang menang dari pada kalah dalam sesuatu permainan.</th>
               </tr>
             </table>
           </div>
