--- a/Kelompok1session5.html
+++ b/Kelompok1session5.html
@@ -120,79 +120,79 @@
 
               </tr>
               <tr>
-                <th><center>16</center></th>
+                <th><center>61</center></th>
                 <th><center><input type="checkbox" class="flat-red"></center></th>
-                <th>Aku merasa hidup ini tidak adil</th>
+                <th>Aku menjalani hidup yang tidak dibenarkan</th>
               </tr>
               <tr>
-                <th><center>17</center></th>
+                <th><center>62</center></th>
                 <th><center><input type="checkbox" class="flat-red"></center></th>
-                <th>Ayahku seorang yang baik</th>
+                <th></th>
               </tr>
               <tr>
-                <th><center>18</center></th>
+                <th><center>48</center></th>
                 <th><center><input type="checkbox" class="flat-red"></center></th>
-                <th>Aku jarang sekali terganggu sembelit(kesukaran buang air besar)</th>
+                <th>pada waktu bersama orang-orang aku merasa terganggu oleh suara-suara yang aneh</th>
               </tr>
               <tr>
-                <th><center>19</center></th>
+                <th><center>49</center></th>
                 <th><center><input type="checkbox" class="flat-red"></center></th>
-                <th>Bilamana aku melamar pekerjaan baru, aku ingin tahu siapa yang yang harus aku hubungi lebih dulu</th>
+                <th>Rasanya aku akan lebih baik apabila semua undang-undang ditiadakan</th>
               </tr>
               <tr>
-                <th><center>20</center></th>
+                <th><center>50</center></th>
                 <th><center><input type="checkbox" class="flat-red"></center></th>
-                <th>Kehidupan Seks-ku  cukup memuaskan</th>
+                <th>Rohku kadang-kadang meninggalkan tubuhku</th>
               </tr>
               <tr>
-                <th><center>21</center></th>
+                <th><center>51</center></th>
                 <th><center><input type="checkbox" class="flat-red"></center></th>
-                <th>Aku pernah ingin sekali lari dari rumah</th>
+                <th>Kesehatanku kurang lebih sama baiknya dengan kesehatan kawan-kawanku</th>
               </tr>
               <tr>
-                <th><center>22</center></th>
+                <th><center>52</center></th>
                 <th><center><input type="checkbox" class="flat-red"></center></th>
-                <th>pada waktu-waktu tertentu alu tertawa dan menangis tanpa dapat kukuasai</th>
+                <th>Bila Aku berpapasan dengan teman-teman sekolah atau kenalan lama,aku lebih suka menghindari mereka, kecuali bila mereka menegurku lebih dulu</th>
               </tr>
               <tr>
-                <th><center>23</center></th>
+                <th><center>53</center></th>
                 <th><center><input type="checkbox" class="flat-red"></center></th>
-                <th>Aku terganggu oleh serangan rasa mual dan muntah-muntah</th>
+                <th>Seorang ulama(rohaniawan) dapat menyembuhkan dengan meletakan tangannya di dahi orang sakit dan berdoa</th>
               </tr>
               <tr>
-                <th><center>24</center></th>
+                <th><center>54</center></th>
                 <th><center><input type="checkbox" class="flat-red"></center></th>
-                <th>Aku merasa tak seorangpun yang mengerti akan diriku</th>
+                <th>Aku disuakai oleh kebanyakan orang yang mengenalku</th>
               </tr>
               <tr>
-                <th><center>25</center></th>
+                <th><center>55</center></th>
                 <th><center><input type="checkbox" class="flat-red"></center></th>
-                <th>aku ingin menjadi penyanyi</th>
+                <th>Aku hamir takpenah terganggu rasa nyeri pada jantung dan dada</th>
               </tr>
               <tr>
-                <th><center>26</center></th>
+                <th><center>56</center></th>
                 <th><center><input type="checkbox" class="flat-red"></center></th>
-                <th>Aku rasa lebih baik tutup mulut bila dalam kesulitan</th>
+                <th>Selagi muda aku pernah dilarang masuk sekolah karena kebrandalanku</th>
               </tr>
               <tr>
-                <th><center>27</center></th>
+                <th><center>57</center></th>
                 <th><center><input type="checkbox" class="flat-red"></center></th>
-                <th>Adakalanya aku dimasuki roh jahat</th>
+                <th>Aku mudah Bergaul</th>
               </tr>
               <tr>
-                <th><center>28</center></th>
+                <th><center>58</center></th>
                 <th><center><input type="checkbox" class="flat-red"></center></th>
-                <th>Prinsikku adalah beruahan membalas orang yang yang buat salah kepadaku</th>
+                <th>Segala sesuatu terjadi seperti yang diramalkan oleh Nabi - nabi</th>
               </tr>
               <tr>
-                <th><center>29</center></th>
+                <th><center>59</center></th>
                 <th><center><input type="checkbox" class="flat-red"></center></th>
-                <th>Dalam Seminggu aku beberapa kali terganggu oleh penyakit lambung(maag)</th>
+                <th>Aku sering harus menerima perintah dari seseorang yang tidak lebih pandai dari pada aku</th>
               </tr>
               <tr>
-                <th><center>30</center></th>
+                <th><center>60</center></th>
                 <th><center><input type="checkbox" class="flat-red"></center></th>
-                <th>Kadang - kadang aku merasa ingin mengumpat caci</th>
+                <th>Aku tidak membaca setiap tajuk rencana surat kabar harian</th>
               </tr>
             </table>
           </div>
