--- a/Kelompok1session3.html
+++ b/Kelompok1session3.html
@@ -120,79 +120,80 @@
 
               </tr>
               <tr>
-                <th><center>16</center></th>
+                <th><center>31</center></th>
                 <th><center><input type="checkbox" class="flat-red"></center></th>
-                <th>Aku merasa hidup ini tidak adil</th>
+                <th>Aku mimpi buruk beberapa malam sekali</th>
               </tr>
               <tr>
-                <th><center>17</center></th>
+                <th><center>32</center></th>
                 <th><center><input type="checkbox" class="flat-red"></center></th>
-                <th>Ayahku seorang yang baik</th>
+                <th>Aku sangat sukar untuk memusatkan perhatian pada suatu pekerjaan</th>
               </tr>
               <tr>
-                <th><center>18</center></th>
+                <th><center>33</center></th>
                 <th><center><input type="checkbox" class="flat-red"></center></th>
-                <th>Aku jarang sekali terganggu sembelit(kesukaran buang air besar)</th>
+                <th>Aku pernah mengalami hal yang aneh dan tidak masuk akal</th>
               </tr>
               <tr>
-                <th><center>19</center></th>
+                <th><center>34</center></th>
                 <th><center><input type="checkbox" class="flat-red"></center></th>
-                <th>Bilamana aku melamar pekerjaan baru, aku ingin tahu siapa yang yang harus aku hubungi lebih dulu</th>
+                <th>Aku Hampir selalu batuk</th>
               </tr>
               <tr>
-                <th><center>20</center></th>
+                <th><center>35</center></th>
                 <th><center><input type="checkbox" class="flat-red"></center></th>
-                <th>Kehidupan Seks-ku  cukup memuaskan</th>
+                <th>Seandainya orang-orang tidak menghalangi,aku akan lebih berhasil
+                </th>
               </tr>
               <tr>
-                <th><center>21</center></th>
+                <th><center>36</center></th>
                 <th><center><input type="checkbox" class="flat-red"></center></th>
-                <th>Aku pernah ingin sekali lari dari rumah</th>
+                <th>Aku jarang merisaukan kesehatan</th>
               </tr>
               <tr>
-                <th><center>22</center></th>
+                <th><center>37</center></th>
                 <th><center><input type="checkbox" class="flat-red"></center></th>
-                <th>pada waktu-waktu tertentu alu tertawa dan menangis tanpa dapat kukuasai</th>
+                <th>Aku belum pernah mengalami kesulitan karena kelakuakn seks-ku</th>
               </tr>
               <tr>
-                <th><center>23</center></th>
+                <th><center>38</center></th>
                 <th><center><input type="checkbox" class="flat-red"></center></th>
-                <th>Aku terganggu oleh serangan rasa mual dan muntah-muntah</th>
+                <th>Dalam suatu masa tertentu waktu masih muda,aku pernah melakukan pencurian kecil-kecilan</th>
               </tr>
               <tr>
-                <th><center>24</center></th>
+                <th><center>39</center></th>
                 <th><center><input type="checkbox" class="flat-red"></center></th>
-                <th>Aku merasa tak seorangpun yang mengerti akan diriku</th>
+                <th>kadang-kadang aku ingin membanting barang-barang</th>
               </tr>
               <tr>
-                <th><center>25</center></th>
+                <th><center>40</center></th>
                 <th><center><input type="checkbox" class="flat-red"></center></th>
-                <th>aku ingin menjadi penyanyi</th>
+                <th>Pada umumnya aku lebh senang duduk melamun dari pada mengerjakan yang lain</th>
               </tr>
               <tr>
-                <th><center>26</center></th>
+                <th><center>41</center></th>
                 <th><center><input type="checkbox" class="flat-red"></center></th>
-                <th>Aku rasa lebih baik tutup mulut bila dalam kesulitan</th>
+                <th>Aku pernah meengalami tidak dapat mengurus sesuatu selama berhari-hari,sampai berbulan-bulan, karna tidak dapat memulai</th>
               </tr>
               <tr>
-                <th><center>27</center></th>
+                <th><center>42</center></th>
                 <th><center><input type="checkbox" class="flat-red"></center></th>
-                <th>Adakalanya aku dimasuki roh jahat</th>
+                <th>Keluargaku tidak senang pada pekerjaan yang telah aku pilih</th>
               </tr>
               <tr>
-                <th><center>28</center></th>
+                <th><center>43</center></th>
                 <th><center><input type="checkbox" class="flat-red"></center></th>
-                <th>Prinsikku adalah beruahan membalas orang yang yang buat salah kepadaku</th>
+                <th>Tidurku sering terganggu dan terjaga</th>
               </tr>
               <tr>
-                <th><center>29</center></th>
+                <th><center>44</center></th>
                 <th><center><input type="checkbox" class="flat-red"></center></th>
-                <th>Dalam Seminggu aku beberapa kali terganggu oleh penyakit lambung(maag)</th>
+                <th>Aku sering merasa seluruh kepalaku sakit</th>
               </tr>
               <tr>
-                <th><center>30</center></th>
+                <th><center>45</center></th>
                 <th><center><input type="checkbox" class="flat-red"></center></th>
-                <th>Kadang - kadang aku merasa ingin mengumpat caci</th>
+                <th>Aku tidak selalu mengatakan yang benar</th>
               </tr>
             </table>
           </div>
